<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FootZone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="str_open_times">Ochiq vaqtlar</string>
    <string name="str_busy">Band qilish</string>
    <string name="str_date">Sana</string>
    <string name="str_cancel">Bekor qilish</string>
    <string name="str_occupancy">Band qilish</string>
    <string name="str_band">Boshqa user tomonidan band qilingan.</string>
    <string name="str_choose_date">Sanani tanlang</string>
    <string name="str_selection">Tanlash</string>
    <string name="str_my_stadium">Mening maydonlarim</string>
    <string name="str_add_stadium">Maydon qo’shish</string>
    <string name="str_stadium_name">Maydon nomi</string>
    <string name="str_location">Manzil</string>
    <string name="str_phone_number">Telefon raqam</string>
    <string name="str_work_time">Ish vaqtlari</string>
    <string name="str_prise">Narxi (so’m/soat)</string>
    <string name="str_save">Saqlash</string>
    <string name="str_edit_stadium">Maydonni tahrirlash</string>
    <string name="str_time_interval">Vaqt oralig’i</string>
    <string name="str_stadium_address">Stadion manzili</string>
    <string name="str_united_kingdom">English</string>
    <string name="str_russian">Russian</string>
    <string name="str_uzbekistan">Uzbekistan</string>
    <string name="str_select_language">Tilni tanlang</string>
    <string name="str_lang">O\'zbekcha</string>4
    <string name="str_setings">Sozlamalar</string>
    <string name="str_so_m_soat">so\'m/soat</string>
    <string name="str_marshrut">Marshrut</string>
    <string name="str_send">Ulashish</string>
    <string name="str_ratings_and_reviews">Reytinglar va sharhlar</string>
    <string name="str_votes">ta ovoz</string>
    <string name="str_open">Ochiq</string>
    <string name="str_changing_game_days">O\'yin kunlarini o\'zgartirish</string>
    <string name="str_delete_image">Rasm o\'chirildi</string>
    <string name="str_error_phone_number">Telefon nomer kiritishda xatolik bor</string>
    <string name="str_error_entering_price">Narxni kiritishda xatolik</string>
    <string name="str_successfully_edited">Maydon muvofaqiyatli tahrirlandi</string>
    <string name="str_error_edited">Maydon muvofaqiyatli tahrirlanmadi, qayta urinib ko\'ring</string>
    <string name="str_successfully_edded">Maydon muvofaqiyatli qo\'shildi.</string>
    <string name="str_not_succesfull">Maydon muvaffaqiyatli qo\'shilmadi, qayta urinib koring</string>
    <string name="str_date_incomplete">Malumotlar to\'liq to\'ldirilmagan</string>
    <string name="str_select_dat_game">O\'yin kunini tanlang</string>
    <string name="str_send_request">Sizning so\'rovingiz yuborildi,\n tez orada javob qaytadi</string>
    <string name="str_not_send_request">Sizning so\'rovingiz yuborilmadi,\qayta urining</string>
    <string name="str_holder_not_stadium">Hozir sizda maydonlar mavjud emas.\nMaydon qo’shish uchun yuqoridagi\n“+” tugmasini bosing</string>
    <string name="str_select_game_time">O\'yin vaqtlarini tanlang</string>
    <string name="str_vote">ta ovoz</string>
    <string name="str_football_stadium">futbol maydoni</string>
    <string name="str_hour">soat</string>
    <string name="channel_id">Something</string>
    <string name="str_internet_off">Internet bilan muammo sodir bo\'ldi.</string>
    <string name="str_internet_on">Internet sifati tiklandi.</string>
    <string name="str_error_get_location">ERROR loading location</string>
    <string name="str_not_registered_yet">Siz hali ro\'yxatdan o\'tmagansiz.\n\Sahifam bo\'limidan ro\'yxatdan o\'tishingiz mumkin</string>
    <string name="str_incorrect_phonenumber">Raqam noto\'g\'ri kiritildi!</string>
    <string name="str_not_reg_with_number">Bu raqam orqali ro\'yxatdan o\'tilmagan. Iltimos ro\'yxatdan o\'ting.</string>
    <string name="str_already_reg_log_in">Siz avval ro\'yxatdan o\'tgansiz.\nIltimos kirish uchun raqamingizni kiriting.</string>
    <string name="str_not_complete_data">Ma\'lumotlar to\'liq kiritilmadi!</string>
    <string name="str_incorrect_code">Kod xato kiritildi.</string>
    <string name="str_please_check">Tekshirib ko\'ring</string>
    <string name="str_field">futbol maydoni</string>

    <string-array name="timelist">
        <item>00:30</item>
        <item>01:00</item>
        <item>01:30</item>
        <item>02:00</item>
        <item>02:30</item>
        <item>03:00</item>
        <item>03:30</item>
        <item>04:00</item>
        <item>04:30</item>
        <item>05:00</item>
        <item>05:30</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>
        <item>23:59</item>
    </string-array>


    <string-array name="daysWeek">
        <item>SUNDAY</item>
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
    </string-array>

</resources>