<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/view_rounded_corners_grey_4dp">

    <LinearLayout
        android:id="@+id/llUz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/iv_flag_uzbekistan"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_uzbekistan"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRu"
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/iv_flag_russia"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_russian"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/iv_flag_united_kingdom"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_united_kingdom"/>
    </LinearLayout>
</LinearLayout>