<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginEnd="5dp">

                <ImageView
                    android:id="@+id/icClose"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:paddingVertical="15dp"
                    android:paddingEnd="20dp"
                    android:src="@drawable/ic_back_icon" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:text="@string/str_add_stadium"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginStart="16dp"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:spanCount="1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="16dp"
            app:boxStrokeColor="#E4E4E4"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="#616161"
            android:layout_marginEnd="20dp" >

            <EditText
                android:id="@+id/etPitchName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_stadium_name"
                android:inputType="text"
                android:textSize="16sp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_backround"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/tvPichLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_location"
                android:textSize="16sp"
                android:textColor="#616161"/>

            <ImageView
                android:id="@+id/ivChooseLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="36dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/ic_location"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="16dp"
            app:boxStrokeColor="#E4E4E4"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="#616161"
            android:layout_marginEnd="20dp" >

            <EditText
                android:id="@+id/etPitchPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_phone_number"
                android:inputType="text"
                android:textSize="16sp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_backround"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/tvPitchWorkTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_work_time"
                android:textSize="16sp"
                android:textColor="#616161"/>

            <ImageView
                android:id="@+id/ivChooseWorkTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="36dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/ic_work_time"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="16dp"
            app:boxStrokeColor="#E4E4E4"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="#616161"
            android:layout_marginEnd="20dp" >

            <EditText
                android:id="@+id/etPitchPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_prise"
                android:inputType="text"
                android:textSize="16sp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <LinearLayout
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/view_rounded_corners"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/str_cancel"
                android:textColor="@color/blue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvOccupancy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/view_rounded_corners_grey"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/str_save"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:backgroundTint="@null" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>