<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_top_oval"
    android:orientation="vertical"
    android:paddingTop="20dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tvBusy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_busy"
            android:textColor="#0A0A0A"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/llDate"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/view_rounded_corners"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/str_date"
                android:textColor="#616161"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/ivCalendar"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_calendar" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittextround"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/ivStartImage"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="16dp"
                            android:src="@drawable/ic_busy"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <NumberPicker
                            android:id="@+id/startTime"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:selectionDividerHeight="0dp"
                            android:soundEffectsEnabled="true"
                            android:theme="@style/NumberPicker"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:gravity="center">

                        <View
                            android:layout_width="24dp"
                            android:layout_height="3dp"
                            android:background="@color/black" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:gravity="center_vertical">

                        <NumberPicker
                            android:id="@+id/finishTime"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:selectionDividerHeight="0dp"
                            android:theme="@style/NumberPicker"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/ivFinishImage"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="NestedWeights" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/view"
                android:layout_marginStart="20dp"
                android:background="@color/white"
                android:includeFontPadding="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="14dp"
                android:text="@string/str_time_interval"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/ivCaution"
                android:layout_width="15dp"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/tvCaution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/green" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginBottom="20dp"
        android:background="@color/grey1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time" />

            <TextView
                android:id="@+id/tvGameTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="2 soat"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_price" />

            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="100 00 so'm"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/view_rounded_corners"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/str_cancel"
                android:textColor="@color/blue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvOccupancy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/view_rounded_corners_grey"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/str_occupancy"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:backgroundTint="@null" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>